--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
     }
 
     .solutionsfalse {
-      display: none;
+      display: block;
     }
 
     .solutionstrue {
@@ -501,7 +501,7 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#overview" raw="# Overview" lo="1" class="">
+        <a href="#overview" raw="# Overview" lo="1">
           <span class="toctext">Overview</span>
         </a>
       </li>
@@ -566,8 +566,8 @@
             </a>
           </li>
           <li>
-            <a href="#solutions" raw="## Solutions" lo="103" class="">
-              <span class="toctext">Solutions</span>
+            <a href="#lenz-s-law" raw="## Lenz's Law" lo="103" class="">
+              <span class="toctext">Lenz’s Law</span>
             </a>
           </li>
         </ol>
@@ -579,7 +579,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h1 class=""><a name="overview" class="anchor hanchor" href="#overview"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
+        <h1><a name="overview" class="anchor hanchor" href="#overview"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
       </div>
       <div class="block">
         <p>These are activities that students work on during a weekly 50–minute recitation for PHYS 260 at GMU. To maximize time that students spend working on problems, I typically give at most a 10–minute review. Often, my 10–minute overview involves working through an example that is nearly identical to the first problem. If many students are stuck on a part of the problem, I will interrupt the class and have students guide to the answer.</p>
@@ -594,7 +594,7 @@
         <div class="comment">%<strong>Motivation</strong></div>
       </div>
       <div class="block">
-        <div class="comment" style="">%In the past, I would solve problems at the board for 40 minutes and then give a quiz at the end. The quiz required students to reproduce something that I had expained several times or to reproduce the set–up of a problem. Based on the results of these very simple quizes, few students got much out of my presentation. In addition, often students would ask for help on homework problems after the recitation that were nearly identical to the problem covered in recitation. It was clear from their questions that their notes from, or memory of, my presentation were of little use.</div>
+        <div class="comment">%In the past, I would solve problems at the board for 40 minutes and then give a quiz at the end. The quiz required students to reproduce something that I had expained several times or to reproduce the set–up of a problem. Based on the results of these very simple quizes, few students got much out of my presentation. In addition, often students would ask for help on homework problems after the recitation that were nearly identical to the problem covered in recitation. It was clear from their questions that their notes from, or memory of, my presentation were of little use.</div>
       </div>
       <div class="block">
         <div class="comment">%Prior to working on these, approximately 1/2–2/3 of the students will have attended two 75–minute lectures covering the associated chapter and content.</div>
@@ -889,39 +889,26 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2 class=""><a name="solutions" class="anchor hanchor" href="#solutions"><span class="hnumber">3.11</span>&nbsp;<span class="htext">Solutions</span></a></h2>
+        <h2 class=""><a name="lenz-s-law" class="anchor hanchor" href="#lenz-s-law"><span class="hnumber">3.11</span>&nbsp;<span class="htext">Lenz’s Law</span></a></h2>
       </div>
       <div class="block">
-        <p>Solutions for the activities are</p>
-      </div>
-      <div class="block">
-        <p class=""><a href="https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf">https://rweigel.github.io/phys260/Electric_Force/Electric_Force-solutions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf">https://rweigel.github.io/phys260/Electric_Field/Electric_Field-solutions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Continuous_Charge_Distributions/Continuous_Charge_Distributions-solution.pdf">https://rweigel.github.io/phys260/Continuous_Charge_Distributions/Continuous_Charge_Distributions-solution.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf">https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux-solutions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Enclosed_Charge/Enclosed_Charge-solutions.pdf">https://rweigel.github.io/phys260/Enclosed_Charge/Enclosed_Charge-solutions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential-solutions.pdf">https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential-solutions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Capacitance/Capacitance-solutions.pdf">https://rweigel.github.io/phys260/Capacitance/Capacitance-solutions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Kirchhoffs_Laws/Kirchhoffs_Laws-solutions.pdf">https://rweigel.github.io/phys260/Kirchhoffs_Laws/Kirchhoffs_Laws-solutions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Lorentz_Force/Lorentz_Force-solutions.pdf">https://rweigel.github.io/phys260/Lorentz_Force/Lorentz_Force-solutions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Lorentz_Force_Wires/Lorentz_Force_Wires-solutions.pdf">https://rweigel.github.io/phys260/Lorentz_Force_Wires/Lorentz_Force_Wires-solutions.pdf</a>
-        </p>
-      </div>
-      <div class="block">
-        <p class="">The following are copies without solutions:</p>
-      </div>
-      <div class="block">
-        <p class=""><a href="https://rweigel.github.io/phys260/Electric_Force/Electric_Force.pdf">https://rweigel.github.io/phys260/Electric_Force/Electric_Force.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Electric_Field/Electric_Field.pdf">https://rweigel.github.io/phys260/Electric_Field/Electric_Field.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Continuous_Charge_Distributions/Continuous_Charge_Distributions.pdf">https://rweigel.github.io/phys260/Continuous_Charge_Distributions/Continuous_Charge_Distributions.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux.pdf">https://rweigel.github.io/phys260/Electric_Flux/Electric_Flux.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Enclosed_Charge/Enclosed_Charge.pdf">https://rweigel.github.io/phys260/Enclosed_Charge/Enclosed_Charge.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential.pdf">https://rweigel.github.io/phys260/Electric_Potential/Electric_Potential.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Capacitance/Capacitance.pdf">https://rweigel.github.io/phys260/Capacitance/Capacitance.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Kirchhoffs_Laws/Kirchhoffs_Laws.pdf">https://rweigel.github.io/phys260/Kirchhoffs_Laws/Kirchhoffs_Laws.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Lorentz_Force/Lorentz_Force.pdf">https://rweigel.github.io/phys260/Lorentz_Force/Lorentz_Force.pdf</a>
-          <a href="https://rweigel.github.io/phys260/Lorentz_Force_Wires/Lorentz_Force_Wires.pdf">https://rweigel.github.io/phys260/Lorentz_Force_Wires/Lorentz_Force_Wires.pdf</a>
-        </p>
+        <ul class="compact added">
+          <li markerlength="2" class="added">
+            <div class="block">
+              <p class="added"><a href="https://github.com/rweigel/phys260/tree/master/Lenzs_Law/README.md">Instructor Notes</a> </p>
+            </div>
+          </li>
+          <li markerlength="2" lo="106" lf="106" class="added">
+            <div class="block">
+              <p class="added">Document: | <a href="Lenzs_Law/Lenzs_Law.pdf">pdf</a> | <a href="Lorentz_Force_Wires/Lenzs_Law-solutions.pdf">pdf solns</a> |</p>
+            </div>
+          </li>
+          <li markerlength="2" lo="107" lf="108" class="added active">
+            <div class="block">
+              <p class="added">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lenzs_Law">Github</a> | <a href="Lenzs_Law/Lenzs_Law.md">Markdown</a> | </p>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
