--- a/Electric_Field/Electric_Field.html
+++ b/Electric_Field/Electric_Field.html
@@ -1618,7 +1618,7 @@ c-16-25.333-24-45-24-59z"></path>
         <ol start="2" lo="155" lf="155" class="compact active">
           <li markerlength="3" padlength="0" lo="155" lf="155" class="">
             <div class="block">
-              <p padlength="0" lo="155" lf="155" class="">Why does it not make sense to ask what the electric <em type="md" marker="_">force</em> is at the origin?</p>
+              <p padlength="0" lo="155" lf="155" class="active">Why does it not make sense to ask what the electric <em type="md" marker="_">force</em> is at the origin?</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">155</span></div>
             </div>
           </li>
