index.md updated by BiEdit

--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#overview" raw="# Overview" lo="1">
+        <a href="#overview" raw="# Overview" lo="1" class="">
           <span class="toctext">Overview</span>
         </a>
       </li>
@@ -570,7 +570,7 @@
             </a>
           </li>
           <li>
-            <a href="#electric-field-and-rhat" raw="## Electric Field and $\rhat$" lo="50" class="highlighted">
+            <a href="#electric-field-and-rhat" raw="## Electric Field and $\rhat$" lo="50">
               <span class="toctext">Electric Field and <span len="7" raw="_\rhat_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7079em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">r</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1944em;"><span class="mord">^</span></span></span></span></span></span></span></span></span></span></span>
             </a>
           </li>
@@ -585,7 +585,7 @@
             </a>
           </li>
           <li>
-            <a href="#enclosed-charge" raw="## Enclosed Charge" lo="78">
+            <a href="#enclosed-charge" raw="## Enclosed Charge" lo="78" class="highlighted">
               <span class="toctext">Enclosed Charge</span>
             </a>
           </li>
@@ -628,11 +628,11 @@
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="1" lf="1"><a name="overview" number="1" lo="1" raw="# Overview" class="anchor hanchor" href="#overview"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
+        <h1 lo="1" lf="1" class=""><a name="overview" number="1" lo="1" raw="# Overview" class="anchor hanchor" href="#overview"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">1</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="3" lf="3">These are activities that students work on during a weekly 50–minute recitation for PHYS 260 at GMU. To maximize time that students spend working on problems, I typically give at most a 10–minute review. Often, my 10–minute overview involves working through an example that is nearly identical to the first problem. If many students are stuck on a part of the problem, I will interrupt the class and have students guide to the answer.</p>
+        <p padlength="0" lo="3" lf="3" class="">These are activities that students work on during a weekly 50–minute recitation for PHYS 260 at GMU. To maximize time that students spend working on problems, I typically give at most a 10–minute review. Often, my 10–minute overview involves working through an example that is nearly identical to the first problem. If many students are stuck on a part of the problem, I will interrupt the class and have students guide to the answer.</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">3</span></div>
       </div>
       <div class="block">
@@ -729,11 +729,11 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="50" lf="50" class="highlighted"><a name="electric-field-and-rhat" number="3.2" lo="50" raw="## Electric Field and $\rhat$" class="anchor hanchor" href="#electric-field-and-rhat"><span class="hnumber">3.2</span>&nbsp;<span class="htext">Electric Field and <span len="7" raw="_\rhat_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7079em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">r</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1944em;"><span class="mord">^</span></span></span></span></span></span></span></span></span></span></span></a></h2>
+        <h2 lo="50" lf="50"><a name="electric-field-and-rhat" number="3.2" lo="50" raw="## Electric Field and $\rhat$" class="anchor hanchor" href="#electric-field-and-rhat"><span class="hnumber">3.2</span>&nbsp;<span class="htext">Electric Field and <span len="7" raw="_\rhat_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7079em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">r</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1944em;"><span class="mord">^</span></span></span></span></span></span></span></span></span></span></span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">50</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="52" lf="52" class="active">Computing the electric field due to one and three point charges.</p>
+        <p padlength="0" lo="52" lf="52">Computing the electric field due to one and three point charges.</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">52</span></div>
       </div>
       <div class="block">
@@ -826,26 +826,26 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="78" lf="78"><a name="enclosed-charge" number="3.5" lo="78" raw="## Enclosed Charge" class="anchor hanchor" href="#enclosed-charge"><span class="hnumber">3.5</span>&nbsp;<span class="htext">Enclosed Charge</span></a></h2>
+        <h2 lo="78" lf="78" class="highlighted"><a name="enclosed-charge" number="3.5" lo="78" raw="## Enclosed Charge" class="anchor hanchor" href="#enclosed-charge"><span class="hnumber">3.5</span>&nbsp;<span class="htext">Enclosed Charge</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">78</span></div>
       </div>
       <div class="block">
         <ul lo="80" lf="82" class="compact">
-          <li markerlength="2" padlength="0" lo="80" lf="80">
+          <li markerlength="2" padlength="0" lo="80" lf="80" class="">
             <div class="block">
-              <p padlength="0" lo="80" lf="80"><a href="https://github.com/rweigel/phys260/tree/master/Enclosed_Charge/README.md">Instructor Notes</a> </p>
+              <p padlength="0" lo="80" lf="80" class=""><a href="https://github.com/rweigel/phys260/tree/master/Enclosed_Charge/README.md">Instructor Notes</a> </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">80</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="81" lf="81">
+          <li markerlength="2" padlength="0" lo="81" lf="81" class="">
             <div class="block">
-              <p padlength="0" lo="81" lf="81">Documents: | <a href="Enclosed_Charge/Enclosed_Charge.pdf">pdf</a> | <a href="Capacitance/Enclosed_Charge-solutions.pdf">pdf solns</a> |</p>
+              <p padlength="0" lo="81" lf="81" class="active">Documents: | <a href="Enclosed_Charge/Enclosed_Charge.pdf">pdf</a> | <a href="Enclosed_Charge/Enclosed_Charge-solutions.pdf">pdf solns</a> |</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">81</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="82" lf="84">
+          <li markerlength="2" padlength="0" lo="82" lf="82" class="">
             <div class="block">
-              <p padlength="0" lo="82" lf="82">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Enclosed_Charge">Github</a> | <a href="Enclosed_Charge/Enclosed_Charge.md!" target="_blank">Markdown</a> | </p>
+              <p padlength="0" lo="82" lf="82" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Enclosed_Charge">Github</a> | <a href="Enclosed_Charge/Enclosed_Charge.md">Markdown</a> | </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">82</span></div>
             </div>
           </li>
