--- a/Electric_Flux/Electric_Flux.html
+++ b/Electric_Flux/Electric_Flux.html
@@ -405,11 +405,11 @@
     }
 
     .solutionsfalse {
-      display: none;
+      display: block;
     }
 
     .solutionstrue {
-      display: block;
+      display: none;
     }
 
     @media print {
@@ -560,12 +560,12 @@
         </a>
         <ol class="toc" style="display: none;">
           <li>
-            <a href="#problem-i" raw="## Problem I" lo="45">
+            <a href="#problem-i" raw="## Problem I" lo="45" class="highlighted">
               <span class="toctext">Problem I</span>
             </a>
           </li>
           <li>
-            <a href="#problem-ii" raw="## Problem II" lo="95" class="highlighted">
+            <a href="#problem-ii" raw="## Problem II" lo="95">
               <span class="toctext">Problem II</span>
             </a>
           </li>
@@ -828,14 +828,14 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="45" lf="45"><a name="problem-i" number="2.1" lo="45" raw="## Problem I" class="anchor hanchor" href="#problem-i"><span class="hnumber">2.1</span>&nbsp;<span class="htext">Problem I</span></a></h2>
+        <h2 lo="45" lf="45" class="highlighted"><a name="problem-i" number="2.1" lo="45" raw="## Problem I" class="anchor hanchor" href="#problem-i"><span class="hnumber">2.1</span>&nbsp;<span class="htext">Problem I</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">45</span></div>
       </div>
       <div class="block">
         <ol lo="47" lf="93" class="loose">
-          <li markerlength="3" padlength="0" lo="47" lf="64">
+          <li markerlength="3" padlength="0" lo="47" lf="64" class="">
             <div class="block">
-              <p padlength="0" lo="47" lf="48">a. Draw an area vector <span len="29" raw="_\bfvec{A}=\hat{\mathbf{n}}A_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">A</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.0966em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
+              <p padlength="0" lo="47" lf="48" class="">a. Draw an area vector <span len="29" raw="_\bfvec{A}=\hat{\mathbf{n}}A_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">A</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.0966em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                       <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
 3.333 2.667 6.667 9 10 19 6.667 24.667 20.333 43.667 41 57 7.333 4.667 11
 10.667 11 18 0 6-1 10-3 12s-6.667 5-14 9c-28.667 14.667-53.667 35.667-75 63
@@ -869,7 +869,7 @@ c-16-25.333-24-45-24-59z"></path>
               <div class="block-info" style="display: none;"><span class="line-numbers">49-55</span></div>
             </div>
             <div class="block">
-              <p padlength="0" lo="57" lf="57">b. Is there only one normal direction to this area? Discuss your reasoning with your group. </p>
+              <p padlength="0" lo="57" lf="57" class="active">b. Is there only one normal direction to this area? Discuss your reasoning with your group. </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">57</span></div>
             </div>
             <div class="block">
@@ -890,9 +890,9 @@ c-16-25.333-24-45-24-59z"></path>
               <div class="block-info" style="display: none;"><span class="line-numbers">59-62</span></div>
             </div>
           </li>
-          <li markerlength="3" padlength="0" lo="65" lf="95">
+          <li markerlength="3" padlength="0" lo="65" lf="93" class="">
             <div class="block">
-              <p padlength="0" lo="65" lf="66">For each of the following <span len="11" raw="_\bfvec{E}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">E</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
+              <p padlength="0" lo="65" lf="66" class="">For each of the following <span len="11" raw="_\bfvec{E}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">E</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                       <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
 3.333 2.667 6.667 9 10 19 6.667 24.667 20.333 43.667 41 57 7.333 4.667 11
 10.667 11 18 0 6-1 10-3 12s-6.667 5-14 9c-28.667 14.667-53.667 35.667-75 63
@@ -912,7 +912,7 @@ c-16-25.333-24-45-24-59z"></path>
               <div class="block-info" style="display: none;"><span class="line-numbers">65-66</span></div>
             </div>
             <div class="block">
-              <div class="inline-html" lo="67" lf="93">
+              <div class="inline-html" lo="67" lf="92">
                 <div class="solutionstrue">
                   <div class="block">
                     <p padlength="0"><strong type="md">Answer</strong></p>
@@ -1218,7 +1218,7 @@ M834 80h400000v40h-400000z"></path>
                   </div>
                 </div>
               </div>
-              <div class="block-info" style="display: none;"><span class="line-numbers">67-93</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">67-92</span></div>
             </div>
           </li>
         </ol>
@@ -1227,7 +1227,7 @@ M834 80h400000v40h-400000z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="95" lf="95" class="highlighted"><a name="problem-ii" number="2.2" lo="95" raw="## Problem II" class="anchor hanchor" href="#problem-ii"><span class="hnumber">2.2</span>&nbsp;<span class="htext">Problem II</span></a></h2>
+        <h2 lo="95" lf="95"><a name="problem-ii" number="2.2" lo="95" raw="## Problem II" class="anchor hanchor" href="#problem-ii"><span class="hnumber">2.2</span>&nbsp;<span class="htext">Problem II</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">95</span></div>
       </div>
       <div class="block">
@@ -1489,7 +1489,7 @@ M834 80h400000v40h-400000z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="132" lf="132" class="active"><a name="-phi_e-through-closed-surface" number="3" lo="132" raw="# $\Phi_E$ Through Closed Surface" class="anchor hanchor" href="#-phi_e-through-closed-surface"><span class="hnumber">3</span>&nbsp;<span class="htext"><span len="8" raw="_\Phi_E_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8333em;vertical-align:-0.15em;"></span><span class="mord"><span class="mord">Φ</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.3283em;"><span style="top:-2.55em;margin-left:0em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight" style="margin-right:0.05764em;">E</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span></span></span></span> Through Closed Surface</span></a></h1>
+        <h1 lo="132" lf="132"><a name="-phi_e-through-closed-surface" number="3" lo="132" raw="# $\Phi_E$ Through Closed Surface" class="anchor hanchor" href="#-phi_e-through-closed-surface"><span class="hnumber">3</span>&nbsp;<span class="htext"><span len="8" raw="_\Phi_E_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8333em;vertical-align:-0.15em;"></span><span class="mord"><span class="mord">Φ</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.3283em;"><span style="top:-2.55em;margin-left:0em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight" style="margin-right:0.05764em;">E</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span></span></span></span> Through Closed Surface</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">132</span></div>
       </div>
       <div class="block">
