--- a/Kirchhoffs_Laws/README.html
+++ b/Kirchhoffs_Laws/README.html
@@ -570,11 +570,11 @@
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="5" lf="5" class="highlighted"><a name="2023-spring" number="2" lo="5" raw="# 2023 Spring" class="anchor hanchor" href="#2023-spring"><span class="hnumber">2</span>&nbsp;<span class="htext">2023 Spring</span></a></h1>
+        <h1 lo="5" lf="5" class="highlighted"><a name="2023-spring" number="2" lo="5" raw="# 2023 Spring" class="anchor hanchor active" href="#2023-spring"><span class="hnumber">2</span>&nbsp;<span class="htext">2023 Spring</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">5</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="7" lf="7" class="active">With a 20-minute introduction, most student got to part 4. In the future, split off the equivalent resistance part into a separate activity (and add background). The equiv. resistance problems were added here without explanation for students who found the other parts easy (usually 1-2 per class of 25).</p>
+        <p padlength="0" lo="7" lf="7" class="">With a 20-minute introduction, most student got to part 4. In the future, split off the equivalent resistance part into a separate activity (and add background). The equiv. resistance problems were added here without explanation for students who found the other parts easy (usually 1-2 per class of 25).</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">7</span></div>
       </div>
     </div>
